Refactor PurchaseOrderService to utilize toList() method for improved readability in stream processing.